<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">CooffeAPP</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">WhippedCream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="toastMessage">Gmail app is not installed</string>
    <string name="subject">Coffee order</string>
</resources>
