<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <CheckBox
                android:id="@+id/notifyWhippedCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="8dp" />

            <TextView
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whippedCream" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <CheckBox
                android:id="@+id/notifyChocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="8dp" />

            <TextView
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:onClick="minusOne"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_of_cups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="12sp" />


            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:onClick="plusOne"
                android:text="+" />

        </LinearLayout>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Order summary"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/orderSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
             -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="summitOrder"
            android:padding="8dp"
            android:text="order"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>


</ScrollView>